@@ -1,5 +1,5 @@
 Package: mirt
-Version: 0.9.2
+Version: 0.9.3
 Date: 2013-08-30
 Type: Package
 Title: Multidimensional Item Response Theory
