@@ -1,5 +1,8 @@
 Changes in mirt 0.9.x
 
+- removed the '1PL' itemtype since the name was too ambiguous. Still possible to obtain however by
+  applying slope constraints to the 2PL/graded response models
+
 - plot() contains a which.items argument to specify which items to plot in aggregate type, such as 
   'infotrace' and 'trace'
 
